--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 theme: 
-title:
-name:
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: Sandip Rijal
+logo: https://github.com/Sandipriz/Sandipriz.github.io/blob/main/images/Sea_headshot.jpg
+
+#description: text below image
+show_downloads: true
+theme: jekyll-theme-minimal
+
