--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sandip Rijal
-logo: https://github.com/Sandipriz/Sandipriz.github.io/blob/main/images/Sea_headshot.jpg
+logo: https://github.com/Sandipriz/Sandipriz.github.io/blob/main/images/circle_headshot.png
 
 #description: text below image
 show_downloads: true
