Update _config.yml remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ logo: /images/circle_headshot.png
 
 #description: text below image
 show_downloads: true
-theme: jekyll-theme-minimal
+remote_theme: mmistakes/minimal-mistakes
 
